--- a/public/index.html
+++ b/public/index.html
@@ -28,7 +28,7 @@
   <meta property="og:image" content="./previewImg.png" />
   <meta property="og:image:width" content="600" />
   <meta property="og:image:height" content="340" />
-  <meta property="og:url" content="https://subhamtandukar-sliding-own-puzzle.vercel.app/" />
+  <meta property="og:url" content="https://sliding-own-puzzle.netlify.app/" />
   <meta property="og:type" content="website" />
 
 
